# claude-telegram-chat

./: .env.example  .gitignore  Dockerfile  README.md  VERCEL_DEPLOYMENT.md  bot.py  build.sh  docker-compose.yml  health_server.py  package.json  pyproject.toml  render.yaml  requirements.txt  start.sh  vercel.json
api/: health.py  webhook.py
scripts/: set_webhook.py
